<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/title_field_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"/>

    <EditText
        android:id="@+id/crime_title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crime_title_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_detail_label"/>

    <Button
        android:id="@+id/crime_date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Thu Mar 12 11:56 EST 2020"/>

    <Button
        android:id="@+id/crime_time_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="발생 시간 :: 23시 59분"/>

    <CheckBox
        android:id="@+id/crime_solved_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_solved_label"/>

    <Button
        android:id="@+id/select_suspect_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_suspect"/>

    <Button
        android:id="@+id/send_criminal_report_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_criminal_report"/>

</LinearLayout>